--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ pandas>=1.3.0                   # Data manipulation and CSV handling
 numpy>=1.21.0                   # Numerical computing
 scikit-learn>=1.0.0             # ML utilities and TF-IDF
 
+# Text Analysis & Readability
+textstat>=0.7.0                 # Flesch-Kincaid Grade Level calculation
+nltk>=3.8.0                     # Natural language processing utilities
+
 # Document Processing (Core)
 pypdf>=3.0.0                    # PDF document parsing
 python-docx>=0.8.11             # DOCX document parsing
